@@ -1,16 +1,15 @@
 package com.project.myRNM.Service;
 
-import com.project.myRNM.Entity.Feedback;
+import com.project.myRNM.Models.Entity.Feedback;
 import com.project.myRNM.Repository.FeedbackRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import java.util.stream.Collectors;
 
 @Service
 public class FeedbackService {
@@ -18,10 +17,10 @@ public class FeedbackService {
     @Autowired
     FeedbackRepo feedbackRepo;
     private static final Logger logger = LoggerFactory.getLogger(FeedbackService.class);
-    public List<Feedback> getFeedbacks() throws Exception {
+    public List<Feedback> getFeedbacks()  {
         try{
-            List<Feedback> feedbackList = feedbackRepo.findsortFeedback();
-            return feedbackList;
+            return feedbackRepo.findsortFeedback();
+
         }
      catch (Exception e){
             e.printStackTrace();
@@ -101,7 +100,7 @@ public class FeedbackService {
         try {
             logger.info("Attempting to fetch all feedback entries.");
             List<Feedback> feedbackList = feedbackRepo.findAll();
-            List<Feedback> feedbacks = feedbackList.stream().filter((res)->res.getUsers_ratings()>=4).collect(Collectors.toList());
+            List<Feedback> feedbacks = feedbackList.stream().filter(res->res.getUsers_ratings()>=4).toList();
             if (feedbackList.isEmpty()) {
                 logger.warn("No feedback found in the system.");
             } else {
