@@ -1,16 +1,20 @@
 package com.project.myRNM.Service;
 
-import com.project.myRNM.DTOs.MonthlyUserCount;
-import com.project.myRNM.DTOs.UserDTO;
-import com.project.myRNM.Entity.Users;
 import com.project.myRNM.Exception.UserNotFoundException;
+import com.project.myRNM.Models.DTOs.MonthlyUserCount;
+import com.project.myRNM.Models.DTOs.UserDTO;
+import com.project.myRNM.Models.DTOs.UserWithFeedbackDTO;
+import com.project.myRNM.Models.Entity.Users;
 import com.project.myRNM.Repository.UserRepo;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -21,19 +25,6 @@ public class UserService {
     @Autowired
     UserRepo userRepo;
 
-    public Users addUserData(Users users) {
-        // checking if the user is already present or not if it is not it throws an error
-        Optional<Users> existingUser = userRepo.findByEmail(users.getEmail());
-        if (existingUser.isPresent()) {
-            throw new RuntimeException("Email has been already registered");
-        }
-        return userRepo.save(users);
-    }
-
-    public Users loginByPost(String email, String password) throws Exception {
-        Optional<Users> users = userRepo.login(email, password);
-        return users.orElseThrow(() -> new RuntimeException("Invalid email or password"));
-    }
 
     public List<Users> getUserData() {
         return userRepo.findAll();
@@ -46,7 +37,7 @@ public class UserService {
         // Convert each User entity to a UserDTO using Java 8 streams
         return users.stream()
                 .map(user -> new UserDTO(user.getId(), user.getName(), user.getEmail(), user.getMobile(), user.getAddress()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Integer totalUsers() {
@@ -72,27 +63,97 @@ public class UserService {
 
         return monthlyCounts;
     }
-
-
     public Users updateProfile(Long id, Users users) throws Exception {
         Users foundUser = userRepo.findById(id).orElse(null);
         if (foundUser == null) {
-            throw new UserNotFoundException("User with id " + id + " not found");
+            throw new UserNotFoundException("User not found");
         }
         foundUser.setAddress(users.getAddress());
         foundUser.setMobile(users.getMobile());
         return userRepo.save(foundUser);
     }
 
+    public List<UserWithFeedbackDTO> getAllUsersAndFeedbacks() {
+        List<Object[]> results = userRepo.findAllUserandFeedbacks();
+
+        List<UserWithFeedbackDTO> userWithFeedbackDTOList = new ArrayList<>();
+
+        for (Object[] result : results) {
+            Long userId = (Long) result[0];
+            String userName = (String) result[1];
+            String userEmail = (String) result[2];
+            String userAddress = (String) result[3];
+            String userMobile = (String) result[4];
+            Date registrationDate = (Date) result[5];
+
+            // Feedback-related data
+            Integer feedbackId = (Integer) result[6];
+            Integer userRatings = (Integer) result[7];
+            String feedback = (String) result[8];
+            Date feedbackDate = (Date) result[9];
+
+            UserWithFeedbackDTO.FeedbackDTO feedbackDTO = new UserWithFeedbackDTO.FeedbackDTO(
+                    feedbackId, userRatings, feedback, feedbackDate);
+
+            List<UserWithFeedbackDTO.FeedbackDTO> feedbacks = new ArrayList<>();
+            feedbacks.add(feedbackDTO);
+
+            // Check if user already exists in the list to avoid duplicates
+            UserWithFeedbackDTO userWithFeedbackDTO = new UserWithFeedbackDTO(
+                    userId, userName, userEmail, userAddress, userMobile, registrationDate, feedbacks);
+
+            userWithFeedbackDTOList.add(userWithFeedbackDTO);
+        }
+
+        return userWithFeedbackDTOList;
+    }
+
+    PasswordEncoder passwordEncoder;
+
+    public Users addUserData(Users users) {
+
+        // checking if the user is already present if they present throws an error
+
+        Optional<Users> existingUser = userRepo.findByEmailOrMobile(users.getEmail(),users.getMobile());
+
+        if (existingUser.isPresent()) {
+
+
+            throw new RuntimeException("User has been already resigtered");
+
+        }
+
+        this.passwordEncoder  = new BCryptPasswordEncoder();
+        users.setPassword(passwordEncoder.encode(users.getPassword()));
+        return userRepo.save(users);
+
+    }
+    public Users loginByPost(String email, String password) throws Exception
+    {
+
+        Optional<Users> users = userRepo.findByEmail(email);
+        if (users.isPresent() && passwordEncoder.matches(password, users.get().getPassword())) {
+            return users.get();
+
+        } else {
+            throw new RuntimeException("Invalid email or password");
+
+        }
+
+    }
+
     public Users updatePassword(Users users) throws Exception {
         Optional<Users> existingUser = userRepo.findByEmail(users.getEmail());
-        if(existingUser.isPresent()){
+        if (existingUser.isPresent()) {
             Users users1 = existingUser.get();
-            users1.setPassword(users.getPassword());
+            this.passwordEncoder = new BCryptPasswordEncoder();
+            users1.setPassword(passwordEncoder.encode(users.getPassword()));
             return userRepo.save(users1);
-        }
-        else {
-           throw new UserNotFoundException("Email is not found");
+        } else {
+            throw new UserNotFoundException("Cannot update the password");
         }
     }
+
 }
+
+
